--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".DetailViewActivity" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".AddEntryActivity" />
 
     </application>
 
