Added basic mvvm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:roundIcon="@mipmap/ic_application_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DistractionTracker">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailViewActivity" />
-        <activity android:name=".SignInActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".AddEntryActivity" />
+        <activity android:name=".ui.DetailViewActivity" />
+        <activity android:name=".ui.SignInActivity" />
+        <activity android:name=".ui.SettingsActivity" />
+        <activity android:name=".ui.AddEntryActivity" />
 
     </application>
 
