Two way binding working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 }
 
@@ -10,6 +11,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
     defaultConfig {
         applicationId "org.brucknem.distractiontracker"
